# mojo

./: .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  zeabur.json
app/: globals.css  layout.tsx
app/api/agent-runner/: route.ts
app/api/agents/: route.ts
app/api/agents/[id]/: route.ts
app/api/market/: route.ts
app/api/parse-strategy/: route.ts
components/agents/: AgentDetail.tsx  AgentLog.tsx  AgentsView.tsx
components/chat/: ChatMessage.tsx  MojoChat.tsx  StrategyCard.tsx
components/layout/: AppShell.tsx  BottomNav.tsx  TickerBar.tsx
components/portfolio/: PortfolioView.tsx
components/signals/: SignalsView.tsx
components/ui/: Badge.tsx  Button.tsx  Card.tsx  MiniChart.tsx  StatusDot.tsx
db/: schema.sql
lib/: agent-engine.ts  anthropic.ts  binance.ts  db.ts  types.ts
tests/: conftest.py  test_agents.py  test_api.py  test_behavioral.py  test_bidding.py  test_circuit_breaker.py  test_collision.py  test_economy.py  test_lending.py  test_memory.py  test_models.py  test_orchestrator.py  test_parallel.py  test_relationships.py  test_trading.py
zhihuiti/: __init__.py  agents.py  api.py  behavioral.py  bidding.py  bloodline.py  circuit_breaker.py  cli.py  collision.py  economy.py  inspection.py  judge.py  lending.py  llm.py  memory.py  models.py  orchestrator.py  parallel.py  prompts.py  realms.py  relationships.py  trading.py
zhihuiti/dashboard/: index.html
